# grpo_loss_trainer

./: AGENTS.md  README.md  pyproject.toml
configs/: default.yaml  supervised.yaml  unsupervised.yaml
data/: train.jsonl  train_supervised.jsonl
research/: implementation.md  plan.md
research/reference_scripts/: qwen3_(4b)_grpo.py  💧_lfm2_5_grpo_with_unsloth.py
scripts/: train.py
src/: __init__.py  config.py  data.py  model.py  templates.py  trainer.py  utils.py
src/rewards/: __init__.py  inverse_loss.py  supervised.py
