[project]
name = "remote-trainer"
version = "0.1.0"
description = "Self-distillation GRPO trainer for unsupervised domain adaptation"
requires-python = ">=3.10"
dependencies = [
    "unsloth",
    "vllm",
    "trl>=0.22.0",
    "transformers>=4.56.0",
    "torch>=2.0.0",
    "datasets",
    "pydantic>=2.0.0",
    "pyyaml",
    "bitsandbytes",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
remote-trainer = "scripts.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
